--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                      </a>
                   </li>
                   <li class = "nav-item">
-                     <a class = "nav-link" href = "#">Registration</a>
+                     <a class = "nav-link" href = "./registration.html">Registration</a>
                   </li>
                   <li class = "nav-item">
                      <a class = "nav-link" href = "#">Organization</a>
