--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>    
     <base href="https://ics2022.github.io" />
     <div class = "container">
-         <nav class = "navbar navbar-expand-sm navbar-dark bg-secondary">
+         <nav class = "navbar navbar-expand-sm navbar-dark bg-secondary fixed-top">
             <button class = "navbar-toggler" type = "button" data-toggle = "collapse" 
                data-target = "#navbarSupportedContent" 
                aria-controls = "navbarSupportedContent" aria-expanded = "false" 
