--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                         <span class = "sr-only">(current)</span>
                      </a>
                   </li>
+                 <li class = "nav-item">
+                     <a class = "nav-link" href = "/information-for-authors.html">For Authors</a>
+                  </li>
                   <li class = "nav-item">
                      <a class = "nav-link" href = "/registration.html">Registration</a>
                   </li>
