--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             background-repeat:no-repeat;
       background-size: 100% 100%;
         color: #008ecf;
-        opacity: .1;
+        opacity: .2;
+        min-height: 600px;
       }
     </style>
   </head>
