--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             background-repeat:no-repeat;
       background-size: contain;
         color: #58b2de;
+        min-height: 600px;
       }
     </style>
   </head>
