--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             background-repeat:no-repeat;
       background-size: 100% 100%;
         color: #58b2de;
-        min-height: 600px;
+        min-height: 400px;
+        opacity: .2;
       }
     </style>
   </head>
