--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <style type="text/css">
       .jumbotron{
        margin-top: 80px;
-      background-image: url(../img/icslogo.png);
+      background-image: url(/icslogo.png);
             background-repeat:no-repeat;
       background-size: 100% 100%;
         
-        min-height: 1000px;
-        opacity: .2;
+        min-height: 600px;
       }
       
       .jumbotext {
