--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       
        <div class="jumbotron">
          <div class="jumbotext">
-          <h1>International Conference on Supercomputing 2022</h1>
-          <h3>June 27-30, 2022; Held virtually</h3>
+          <h1><b>International Conference on Supercomputing 2022</b></h1>
+          <h3><b>June 27-30, 2022; Held virtually</b></h3>
          </div>
        </div>
       
