--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
        <div class="jumbotron">
          <div class="jumbotext">
           <h1><b>International Conference on Supercomputing 2022</b></h1>
-          <h3><b>June 27-30, 2022; Held virtually</b></h3>
+          <h3 style="font-style: italic;"><b>June 27-30, 2022; Held virtually</b></h3>
          </div>
        </div>
       
