--- a/organization.html
+++ b/organization.html
@@ -81,11 +81,15 @@
          <h3>Organization</h3>
             <div style="margin-left:20px">
         <h4>General co-chairs</h4>
-                Lawrence Rauchwerger, University of Illinois
-                Kirk Cameron, Virginia Tech
+                <ul>
+                    <li>Lawrence Rauchwerger, University of Illinois</li>
+                    <li> Kirk Cameron, Virginia Tech</li>
+                </ul>
         <h4>Program co-chairs</h4>
-                Dimitrios S. Nikolopoulos, Virginia Tech
-                Dionisios Pnevmatikatos, National Technical University of Athens
+                <ul>
+                    <li>Dimitrios S. Nikolopoulos, Virginia Tech</li>
+                    <li>Dionisios Pnevmatikatos, National Technical University of Athens</li>
+                </ul>
         <h4>Finance chair</h4>
         <h4>Workshops and tutorials co-chairs</h4>
         <h4>Publications chair</h4>
