--- a/organization.html
+++ b/organization.html
@@ -92,8 +92,17 @@
                 </ul>
         <h4>Finance chair</h4>
         <h4>Workshops and tutorials co-chairs</h4>
+                <ul>
+                    <li>Rong Ge, Clemson University</li>
+                    <li>Gokcen Kestor, Pacific Northwester National Laboratory</li>
+                </ul>
         <h4>Publications chair</h4>
-        <h4>Publicity chair</h4>
+        <h4>Publicity chairs</h4>
+                <ul>
+                    <li>Kei Hiraki, University of Tokyo</li>
+                    <li>Shuaiwen Song, University of Sydney</li>
+                    <li>Hans Vandierendonck, Queens University Belfast</li>
+                </ul>
         <h4>Registration chair</h4>
         <h4>Online activity chair</h4>
         <h4>Program committee</h4>
