--- a/organization.html
+++ b/organization.html
@@ -94,7 +94,7 @@
         <h4>Workshops and tutorials co-chairs</h4>
                 <ul>
                     <li>Rong Ge, Clemson University</li>
-                    <li>Gokcen Kestor, Pacific Northwester National Laboratory</li>
+                    <li>Gokcen Kestor, Pacific Northwest National Laboratory</li>
                 </ul>
         <h4>Publications chair</h4>
         <h4>Publicity chairs</h4>
